--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.23)
 project(Bargain_Hunting C)
-include_directories(include)
 
-set(CURL_LIBRARY "-lcurl")
-FIND_PACKAGE(CURL REQUIRED)
+
+FIND_PACKAGE(CURL)
 #FIND_PACKAGE(CURL)
 set(CMAKE_C_STANDARD 99)
 
@@ -11,3 +10,6 @@ set(CMAKE_C_STANDARD 99)
 add_executable(Bargain_Hunting scraper.c scraper.h)
 INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
 target_link_libraries(Bargain_Hunting ${CURL_LIBRARIES})
+
+
+
