--- a/.gitignore
+++ b/.gitignore
@@ -58,9 +58,9 @@ CMakeFiles*
 .cmake*
 .ninja_deps
 .ninja_log
-.build.ninja
-.cmake_install
-.CMakeCache
+build.ninja
+cmake_install.cmake
+.CMakeCache.txt
 
 .vscode
 !.vscode/settings.json
