--- a/.gitignore
+++ b/.gitignore
@@ -49,15 +49,18 @@ Mkfile.old
 dkms.conf
 
 .idea
-..cmake-build
+.cmake-build
 CMakeFiles*
 Testing*
-.cmake*
+#.cmake*
+cmake-build*
+#cmake-build-debug/*
 .ninja_deps
 .ninja_log
 build.ninja
 cmake_install.cmake
 CMakeCache.txt
+
 
 .vscode
 !.vscode/settings.json
