correct_dk_char works
Merge with main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,5 @@ FIND_PACKAGE(CURL REQUIRED)
 
 
 add_executable(Bargain_Hunting scraper.c scraper.h)
+INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
+target_link_libraries(Bargain_Hunting ${CMAKE_SOURCE_DIR}/lib/libcurl.dll.a)
