--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,10 @@
 *.pch
 
 # Libraries
-*.lib
-*.a
 *.la
 *.lo
 
 # Shared objects (inc. Windows DLLs)
-*.dll
 *.so
 *.so.*
 *.dylib
@@ -52,9 +49,17 @@ Mkfile.old
 dkms.conf
 
 .idea
-cmake-build*
+..cmake-build
+CMakeFiles*
+Testing*
+.cmake*
+.ninja_deps
+.ninja_log
+build.ninja
+cmake_install.cmake
+CMakeCache.txt
 
-.vscode/*
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
